--- a/Resources/Private/Templates/Page/Index.html
+++ b/Resources/Private/Templates/Page/Index.html
@@ -18,7 +18,6 @@ Otherwise your changes will be overwritten the next time you save the extension 
 <f:section name="content">
 <link rel="stylesheet" href="/studienprojekt/typo3/sysext/backend/Resources/Public/Css/backend.css?1665474386" media="all" />
 
-
 <!-- site header -->
 <div class="module-docheader t3js-module-docheader">
   <div class="module-docheader-bar module-docheader-bar-navigation t3js-module-docheader-bar t3js-module-docheader-bar-navigation row">
@@ -70,11 +69,11 @@ Otherwise your changes will be overwritten the next time you save the extension 
 
           <!-- Color Brush Button -->
           <div class="example">
-            <span onclick="alertColor()" class="btn">
+            <a href="javascript:alertColor();" class="btn">
               <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor" class="bi bi-paint-bucket" viewBox="0 0 16 16">
                 <path d="M6.192 2.78c-.458-.677-.927-1.248-1.35-1.643a2.972 2.972 0 0 0-.71-.515c-.217-.104-.56-.205-.882-.02-.367.213-.427.63-.43.896-.003.304.064.664.173 1.044.196.687.556 1.528 1.035 2.402L.752 8.22c-.277.277-.269.656-.218.918.055.283.187.593.36.903.348.627.92 1.361 1.626 2.068.707.707 1.441 1.278 2.068 1.626.31.173.62.305.903.36.262.05.64.059.918-.218l5.615-5.615c.118.257.092.512.05.939-.03.292-.068.665-.073 1.176v.123h.003a1 1 0 0 0 1.993 0H14v-.057a1.01 1.01 0 0 0-.004-.117c-.055-1.25-.7-2.738-1.86-3.494a4.322 4.322 0 0 0-.211-.434c-.349-.626-.92-1.36-1.627-2.067-.707-.707-1.441-1.279-2.068-1.627-.31-.172-.62-.304-.903-.36-.262-.05-.64-.058-.918.219l-.217.216zM4.16 1.867c.381.356.844.922 1.311 1.632l-.704.705c-.382-.727-.66-1.402-.813-1.938a3.283 3.283 0 0 1-.131-.673c.091.061.204.15.337.274zm.394 3.965c.54.852 1.107 1.567 1.607 2.033a.5.5 0 1 0 .682-.732c-.453-.422-1.017-1.136-1.564-2.027l1.088-1.088c.054.12.115.243.183.365.349.627.92 1.361 1.627 2.068.706.707 1.44 1.278 2.068 1.626.122.068.244.13.365.183l-4.861 4.862a.571.571 0 0 1-.068-.01c-.137-.027-.342-.104-.608-.252-.524-.292-1.186-.8-1.846-1.46-.66-.66-1.168-1.32-1.46-1.846-.147-.265-.225-.47-.251-.607a.573.573 0 0 1-.01-.068l3.048-3.047zm2.87-1.935a2.44 2.44 0 0 1-.241-.561c.135.033.324.11.562.241.524.292 1.186.8 1.846 1.46.45.45.83.901 1.118 1.31a3.497 3.497 0 0 0-1.066.091 11.27 11.27 0 0 1-.76-.694c-.66-.66-1.167-1.322-1.458-1.847z"/>
               </svg>
-            </span>
+            </a>
           </div>
 
           <!-- Button 2 -->
@@ -83,7 +82,6 @@ Otherwise your changes will be overwritten the next time you save the extension 
               Textoptionen
             </a>
           </li>
-
 
           <!-- JavaScript for this file -->
           <script>
@@ -99,50 +97,60 @@ Otherwise your changes will be overwritten the next time you save the extension 
               alert(colorPVTemp);
             }
 
+            function changeColor(){
 
-            require(['TYPO3/CMS/Core/Ajax/AjaxRequest'], function (AjaxRequest) {
-              var testButtons = document.getElementsByClassName("testButton");
+            }
 
-              let test = function (element){
-                var element = this;
 
-                const randomNumber = Math.ceil(Math.random() * 32);
-                new AjaxRequest(TYPO3.settings.ajaxUrl.test_test)
-                    .withQueryArguments({input: randomNumber})
-                    .get()
-                    .then(async function (response){
-                      const resolved = await response.resolve();
-                      console.log(resolved.result);
-                    })
-                }
+            function ajaxTest(){
+              let baseurl = '<?= $this->request->getBaseUri()>';
 
-              for (var i = 0; i < testButtons.length; i++){
-                testButtons[i].addEventListener('click', test, false);
-              }
-            });
-
-            function anotherTest(){
               $.ajax({
-                type: 'POST',
-                url: TYPO3.settings.ajaxUrls['PageController::doSomething'],
-                data: {
-                  input: 123
-                },
-                success: function (){
-                  alert("ai");
-                },
-                error: function (request, status, error) {
-                  alert("AJAX Error: " + error + request + status);
-                }
+                type: "POST",
+                url: baseurl + "/PageController/ajaxTest",
 
-              })
+              });
             }
           </script>
 
 
-          <button class="testButton" title="Test">Ajax Test</button>
+          <!-- show of concept: header background color can be changed -->
+          <!--
+          <div class="example">
+            <a href="javascript:changeColor();" class="btn btn-primary">
+              Change Header Test
+            </a>
+          </div>
 
-          <button class="test-Button2" onclick="anotherTest()" title="Test">2nd Ajax Test</button>
+          <ul class="fence list-unstyled">
+            <f:for each="{pageID}" as="action">
+
+                <li>
+                  <f:link.action class="btn btn-default btn-block btn-lg" name="{action}" id="{action}">{action}
+                  </f:link.action >
+                </li>
+            </f:for>
+
+          </ul>
+
+
+
+          <button  action="test">
+            <i class="fa fa-plus fa-fw"></i>
+          </button>
+
+
+
+          <button>
+            <f:link.action action="anotherTest">test2</f:link.action>
+          </button>
+
+          <div class="example">
+            <a href="javascript:ajaxTest();" class="btn btn-primary">
+              Ajax Trest
+            </a>
+          </div>
+          -->
 
 
         </ul>
@@ -189,7 +197,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
                   </div>
                 </div>
                 <div class="form-group t3js-formengine-validation-marker t3js-formengine-palette-field col col-sm-6">
-                  <label class="t3js-formengine-label">Content Layout</label> <!--  asdasd -->
+                  <label class="t3js-formengine-label">subpage w/e</label> <!--  asdasd -->
                   <div class="formengine-field-item t3js-formengine-field-item">
                     <div class="form-control-wrap">
                       <div class="form-wizards-wrap">
