--- a/Resources/Private/Templates/Page/Index.html
+++ b/Resources/Private/Templates/Page/Index.html
@@ -19,6 +19,12 @@ Otherwise your changes will be overwritten the next time you save the extension 
 <link rel="stylesheet" href="/studienprojekt/typo3/sysext/backend/Resources/Public/Css/backend.css?1665474386" media="all" />
 
 
+
+<!-- <f:format.html>{2Spalten-30-70}</f:format.html> -->
+
+
+
+
 <!-- site header -->
 <div class="module-docheader t3js-module-docheader">
   <div class="module-docheader-bar module-docheader-bar-navigation t3js-module-docheader-bar t3js-module-docheader-bar-navigation row">
@@ -180,7 +186,9 @@ Otherwise your changes will be overwritten the next time you save the extension 
                         <div class="form-wizards-items-bottom">
                           <div class="t3js-forms-select-single-icons icon-list">
                             <div class="row">
-                              <img loading="lazy" src="/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_1Spaltig.png" alt="Eine Spalte" title="Eine Spalte">
+                              <!-- <img loading="lazy" src="/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_1Spaltig.png" alt="Eine Spalte" title="Eine Spalte"> -->
+                              <f:format.html>{homepage1}</f:format.html>
+                              
                             </div>
                           </div>
                         </div>
@@ -222,7 +230,9 @@ Otherwise your changes will be overwritten the next time you save the extension 
                         <div class="form-wizards-items-bottom">
                           <div class="t3js-forms-select-single-icons icon-list">
                             <div class="row">
-                              <img loading="lazy" src="/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_1Spaltig.png" alt="Eine Spalte" title="Eine Spalte">
+                              <f:format.html>{1spaltig}</f:format.html>
+
+                              <!-- <img loading="lazy" src="/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_1Spaltig.png" alt="Eine Spalte" title="Eine Spalte"> -->
                             </div>
                           </div>
                         </div>
