--- a/Resources/Private/Templates/Page/Index.html
+++ b/Resources/Private/Templates/Page/Index.html
@@ -143,13 +143,32 @@ Otherwise your changes will be overwritten the next time you save the extension 
 
               })
             }
+
+
+            function changeHomepage() {
+              let e = document.getElementById("homepageOption");
+              let value = e.value;
+              let text = e.options[e.selectedIndex].text;
+
+              let elem  = document.getElementById('homepage');
+              elem.append('<f:format.html>{'.concat(text, '}</f:format.html>'));              
+            }
+
+            function changeGrid() {
+              var e = document.getElementById("gridOption");
+              var value = e.value;
+              var text = e.options[e.selectedIndex].text;
+
+              let elem  = document.getElementById('grid');
+              elem.innerHTML = "";
+              elem.innerHTML = "<f:format.html>{2Spalten-30-70}</f:format.html>";
+            }
           </script>
 
 
           <button class="testButton" title="Test">Ajax Test</button>
 
           <button class="test-Button2" onclick="anotherTest()" title="Test">2nd Ajax Test</button>
-
 
         </ul>
         <div class="tab-content">
@@ -172,9 +191,9 @@ Otherwise your changes will be overwritten the next time you save the extension 
                             </span>
 
                             <!-- TODO typoescript for loop add options -->
-                            <select id="" name="" data-formengine-validation-rules="[{&quot;type&quot;:&quot;select&quot;,&quot;minItems&quot;:0,&quot;maxItems&quot;:1}]" class="form-select form-control-adapt">
-                              <option value="" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/homepage1.png&quot; alt=&quot;Homepage1&quot; title=&quot;Homepage1&quot; />" selected="selected">Homepage1</option>
-                              <option value="pagets__homepage2" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/homepage2.png&quot; alt=&quot;Homepage2&quot; title=&quot;Homepage2&quot; />">Homepage2</option>
+                            <select id="homepageOption" onchange="changeHomepage()" name="" data-formengine-validation-rules="[{&quot;type&quot;:&quot;select&quot;,&quot;minItems&quot;:0,&quot;maxItems&quot;:1}]" class="form-select form-control-adapt">
+                              <option value="" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/homepage1.png&quot; alt=&quot;Homepage1&quot; title=&quot;Homepage1&quot; />" selected="selected">homepage1</option>
+                              <option value="pagets__homepage2" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/homepage2.png&quot; alt=&quot;Homepage2&quot; title=&quot;Homepage2&quot; />">homepage2</option>
                             </select>
 
 
@@ -185,7 +204,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
                         </div>
                         <div class="form-wizards-items-bottom">
                           <div class="t3js-forms-select-single-icons icon-list">
-                            <div class="row">
+                            <div class="row" id="homepage" style="height: 500px;">
                               <!-- <img loading="lazy" src="/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_1Spaltig.png" alt="Eine Spalte" title="Eine Spalte"> -->
                               <f:format.html>{homepage1}</f:format.html>
                               
@@ -213,9 +232,13 @@ Otherwise your changes will be overwritten the next time you save the extension 
 
 
                             <!-- TODO typoescript for loop add options -->
-                            <select id="tceforms-select-63790353c07c7687714246" name="data[pages][251][backend_layout_next_level]" data-formengine-validation-rules="[{&quot;type&quot;:&quot;select&quot;,&quot;minItems&quot;:0,&quot;maxItems&quot;:1}]" class="form-select form-control-adapt">
-                              <option value="pagets__1spaltig" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_1Spaltig.png&quot; alt=&quot;Eine Spalte&quot; title=&quot;Eine Spalte&quot; />" selected="selected">Eine Spalte</option>
-                              <option value="pagets__2Spalten-30-70" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_30-70.png&quot; alt=&quot;Zwei Spalten - 30/70&quot; title=&quot;Zwei Spalten - 30/70&quot; />">Zwei Spalten - 30/70</option><option value="pagets__2Spalten-50-50" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_50-50.png&quot; alt=&quot;Zwei Spalten - 50/50&quot; title=&quot;Zwei Spalten - 50/50&quot; />">Zwei Spalten - 50/50</option><option value="pagets__2Spalten-70-30" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_70-30.png&quot; alt=&quot;Zwei Spalten - 70/30&quot; title=&quot;Zwei Spalten - 70/30&quot; />">Zwei Spalten - 70/30</option>
+                            <!-- <select id="tceforms-select-63790353c07c7687714246" name="data[pages][251][backend_layout_next_level]" data-formengine-validation-rules="[{&quot;type&quot;:&quot;select&quot;,&quot;minItems&quot;:0,&quot;maxItems&quot;:1}]" class="form-select form-control-adapt"> -->
+
+                            <select id="gridOption" onchange="changeGrid()" name="data[pages][251][backend_layout_next_level]" data-formengine-validation-rules="[{&quot;type&quot;:&quot;select&quot;,&quot;minItems&quot;:0,&quot;maxItems&quot;:1}]" class="form-select form-control-adapt">
+                              <option value="pagets__1spaltig" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_1Spaltig.png&quot; alt=&quot;Eine Spalte&quot; title=&quot;Eine Spalte&quot; />" selected="selected">1spaltig</option>
+                              <option value="pagets__2Spalten-30-70" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_30-70.png&quot; alt=&quot;Zwei Spalten - 30/70&quot; title=&quot;Zwei Spalten - 30/70&quot; />">2Spalten-30-70</option>
+                              <option value="pagets__2Spalten-50-50" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_50-50.png&quot; alt=&quot;Zwei Spalten - 50/50&quot; title=&quot;Zwei Spalten - 50/50&quot; />">2Spalten-50-50</option>
+                              <option value="pagets__2Spalten-70-30" data-icon="<img loading=&quot;lazy&quot;  src=&quot;/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_70-30.png&quot; alt=&quot;Zwei Spalten - 70/30&quot; title=&quot;Zwei Spalten - 70/30&quot; />">2Spalten-70-30</option>
                             </select>
 
 
@@ -228,8 +251,8 @@ Otherwise your changes will be overwritten the next time you save the extension 
                           </div>
                         </div>
                         <div class="form-wizards-items-bottom">
-                          <div class="t3js-forms-select-single-icons icon-list">
-                            <div class="row">
+                          <div class="t3js-forms-select-single-icons icon-list" >
+                            <div class="row" id="grid" style="height: 500px;">
                               <f:format.html>{1spaltig}</f:format.html>
 
                               <!-- <img loading="lazy" src="/studienprojekt/typo3conf/ext/typo3_template_baukasten/Resources/Public/Icons/BackendLayouts/main_1Spaltig.png" alt="Eine Spalte" title="Eine Spalte"> -->
