--- a/Resources/Private/Backend/Layouts/Default.html
+++ b/Resources/Private/Backend/Layouts/Default.html
@@ -1,18 +1,17 @@
 <html
-    xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
-    xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
-    data-namespace-typo3-fluid="true">
+        xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+        xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+        data-namespace-typo3-fluid="true">
 
 <be:moduleLayout>
+    <!--
     <f:be.pageRenderer />
 
     <be:moduleLayout.menu identifier="ModuleMenu">
         <be:moduleLayout.menuItem label="Overview" uri="{f:uri.action(controller: 'Page', action: 'list')}" />
-        <be:moduleLayout.menuItem label="Create new Page" uri="{f:uri.action(controller: 'Page', action: 'new')}" />
     </be:moduleLayout.menu>
-
-    <f:render section="Buttons" />
-    <be:moduleLayout.button.shortcutButton displayName="Shortcut" />
+    -->
+    <f:render section="Header" />
 
     <f:render section="Content" />
 </be:moduleLayout>
